adding client registration functionality

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -290,14 +290,11 @@ label,
   text-align: right;
   margin: -23px 0 0 75px;
 }
-#team {
-  text-align: center;
-}
 #team .heading {
-  padding-left: 20px;
   text-align: left;
+  padding-left: 20px;
 }
-#team .member {
+.member {
   padding: 10px;
   margin: 20px;
   color: #777;
@@ -312,12 +309,13 @@ label,
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  text-align: center;
   display: inline-block;
 /* Hack for IE 6/7 */
   *display: inline;
   *margin: 0 20px 0 20px;
 }
-#team .member .image {
+.member .image {
   width: 100px;
   height: 100px;
   margin: auto;
@@ -333,25 +331,62 @@ label,
   background-size: 30px 30px;
 }
 #clients .heading {
+  text-align: left;
   padding-left: 20px;
 }
-#controls {
+#clients #controls {
   position: absolute;
   top: 4px;
   right: 140px;
 }
-#controls {
+#clients #controls {
   padding: 10px;
 }
-#controls .input-medium {
+#clients #controls .input-medium {
   width: 225px;
   margin: 0;
 }
-#controls #search {
+#clients #controls #search {
   width: 80px;
 }
-#controls #register {
+#clients #controls #register {
   width: 120px;
+}
+.group {
+  float: left;
+}
+.group select {
+  float: left;
+  width: 50px;
+}
+.group .wide {
+  width: 70px;
+}
+.group label {
+  display: inline-block;
+  margin: 5px 15px 5px 5px;
+}
+#add-client .well {
+  height: 316px;
+}
+#add-client fieldset {
+  width: 490px;
+  position: absolute;
+}
+#add-client #btn1,
+#btn2 {
+  position: absolute;
+  top: 445px;
+  width: 80px;
+}
+#add-client #btn1 {
+  right: 106px;
+}
+#add-client #btn2 {
+  right: 18px;
+}
+#add-client .modal-footer {
+  height: 20px;
 }
 .modal-form-errors li {
   color: #d8000c;
@@ -393,6 +428,7 @@ button i {
   width: 940px;
   height: 100%;
   margin: auto;
+  text-align: center;
   padding: 0 20px 0 20px;
 }
 .footer {
