--- a/app/server/views/print.jade
+++ b/app/server/views/print.jade
@@ -62,6 +62,7 @@ div(style='margin:-18px 20px 0 20px')
 					th Ethnicity
 					th Birthday
 					th Social
+					th Language
 					th Height
 					th Eye Color
 					th Veteran
@@ -76,6 +77,7 @@ div(style='margin:-18px 20px 0 20px')
 					td	#{clients[i].ethnicity}
 					td	#{clients[i].birthMonth} #{clients[i].birthDay} #{clients[i].birthYear}
 					td	#{clients[i].social}
+					td	#{clients[i].language}
 					td	#{clients[i].heightFeet} #{clients[i].heightInches}
 					td	#{clients[i].eyeColor}
 					td	#{clients[i].veteran}
