Rough out Dashboard 1
Break stylesheets out.
Add Stylus Mixins
Add some background images.
Initial styles for the dashboard items.

Signed-off-by: Rob Dodson <lets.email.rob@gmail.com>

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -1,3 +1,9 @@
+/* Include your css files here */
+@import "base.css"
+@import "layout.css"
+@import "modules.css"
+
+/*
 header_height = 40px
 footer_height = 20px
 
@@ -291,9 +297,10 @@ label, .subheading
 	padding-right 10px
 	text-align right
 	margin -23px 0 0 75px
+*/
 
 // team //
-
+/*
 #team .heading
 	text-align left
 	padding-left 20px
@@ -303,7 +310,6 @@ label, .subheading
 	drawContainer()
 	text-align center
 	display inline-block
-	/* Hack for IE 6/7 */
 	*display inline
 	*margin 0 20px 0 20px
 .member .image
@@ -417,3 +423,4 @@ button i
 	bottom 0
 	width 100%
 	background #222;
+*/
