--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -3,6 +3,7 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
+		link(rel='stylesheet', href='/vendor/bootstrap-responsive.min.css')
 		link(rel='stylesheet', href='/css/style.css')
 		script(type='text/javascript')
 			var _gaq = _gaq || [];
