CSS for first Dashboard mostly finished
Removed minified bootstrap.css and bootstrap-responsive.css so the development versions can be read and tweaked where needed.

Added Nib

Added header bar

Commented out certain parts of the responsive grid to keep things tighter on the page

Signed-off-by: Rob Dodson <lets.email.rob@gmail.com>

--- a/app/public/css/mixins.styl
+++ b/app/public/css/mixins.styl
@@ -9,26 +9,10 @@ border-radius(n)
 	-moz-border-radius n
 	border-radius n
 
+!!! NOTE !!!
+The creator of Stylus provides a library of common mixins called 'Nib'. Nib is already required as part of the project so check the Nib docs before writing a mixin as there's a good chance they've already provided one.
+
+Docs: http://visionmedia.github.com/nib/
+Github: https://github.com/visionmedia/nib
+
 */
-
-round-corners(n)
-	-webkit-border-radius n
-	-moz-border-radius n
-	border-radius n
-
-text-shadow()
-	-webkit-text-shadow arguments
-	-moz-text-shadow arguments
-	text-shadow arguments
-
-box-shadow()
-	-webkit-box-shadow arguments
-	-moz-box-shadow arguments
-	box-shadow arguments
-
-transition()
-	-webkit-transition arguments
-	-moz-transition arguments
-	-ms-transition arguments
-	-o-transition arguments
-	transition arguments
