--- a/app/server/views/menu.jade
+++ b/app/server/views/menu.jade
@@ -1,3 +1,16 @@
+div.navbar.navbar-fixed-top
+	div.navbar-inner
+		div.container
+			a.brand(href="#") BRIDGE
+			ul.nav
+				li.divider-vertical
+			ul.nav.pull-right
+				li
+					a Welcome, John Doe
+				li.divider-vertical
+				li
+					a Log Out
+
 div.container
 	div.menu-wrapper
 		div.row
@@ -10,4 +23,77 @@ div.container
 						img(src='/img/icons/beds.png')
 					div.menu-progress
 						div.v-progress
-							div.v-progress-bar(style="height: 60%")
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 MEALS
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 HEALTH CARE
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 HYGIENE
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 EMPLOYMENT
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 CHILD CARE
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 MENTAL HEALTH
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+			div.span3
+				div.menu-item
+					div.menu-chrome
+					div.menu-header
+						h2 FINANCIAL
+					div.menu-thumbnail
+						img(src='/img/icons/beds.png')
+					div.menu-progress
+						div.v-progress
+							div.v-progress-bar
+	div.row
+		div.span12
+			a.button.button-reserve Reserve
