--- a/app/public/css/base.styl
+++ b/app/public/css/base.styl
@@ -24,6 +24,7 @@ Examples of Base Styles:
 */
 
 @import 'mixins'
+@import 'nib'
 
 *
 	-moz-box-sizing border-box
@@ -36,3 +37,8 @@ body
 h2
 	color #6B6B6B
 	text-shadow 0 1px 1px white
+
+a
+	cursor pointer
+a:hover
+	text-decoration none
