--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -1,31 +1,1 @@
-/*
-
-Layout rules divide the page into sections. Layout rules should affect the 'major' components, things like header, primary-col, footer, etc. The 'minor' components are refered to as modules and are dealt with in modules.css.
-
-Examples of Layout Styles:
-
-    #header, #article, #footer {
-        width: 960px;
-        margin: auto;
-    }
-
-    #article {
-        border: solid #CCC;
-        border-width: 1px 0 0;
-    }
-
-    .grid {
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-    }
-
-    .grid > li {
-        display: inline-block;
-        margin: 0 0 10px 10px; 
-    }
-
-*/
-.menu-wrapper {
-  margin-top: 86px;
-}
+.menu-wrapper{margin-top:86px}
