--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -1,133 +1,12 @@
-/*
-
-Modules are the reusable, modular parts of our design. They are the callouts, the sidebar sections, the product lists and so on. This is where the majority of your styles will go.
-
-Examples of Module Styles:
-
-    .folder {
-        padding: 5px;
-    }
-    .folder-name {
-        color: #FFF;
-    }
-    .folder-items {
-        background: url(icon.png);
-    }
-
-Examples of Subclassing Modules:
-
-    .pod { 
-        width: 100%; 
-    } 
-    .pod input[type=text] { 
-        width: 50%; 
-    }
-
-    .pod-constrained input[type=text] {
-        width: 100%; 
-    }
-
-    .pod-callout { 
-        width: 200px; 
-    }
-    .pod-callout input[type=text] { 
-        width: 180px; 
-    }
-
-Usage of a sublcass in HTML would look like this:
-    
-    <div class="pod">...</div>
-    <div class="pod pod-constrained">...</div>
-    <div class="pod pod-callout">...</div> 
-
-*/
-.menu-item {
-  position: relative;
-  width: 220px;
-  height: 166px;
-  background-color: #ebebeb;
-  margin-bottom: 30px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-.menu-chrome {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 1px solid #acacac;
-  -webkit-box-shadow: inset -1px -1px 1px rgba(255,255,255,0.4), inset 1px 1px 1px rgba(255,255,255,0.4);
-  -moz-box-shadow: inset -1px -1px 1px rgba(255,255,255,0.4), inset 1px 1px 1px rgba(255,255,255,0.4);
-  box-shadow: inset -1px -1px 1px rgba(255,255,255,0.4), inset 1px 1px 1px rgba(255,255,255,0.4);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-.menu-header {
-  height: 40px;
-  background: #dadada;
-  border-bottom: 1px solid #cbcbcb;
-  text-align: center;
-}
-.menu-thumbnail {
-  background-image: url("../img/bkgd/menu-item-background.jpg");
-  background-repeat: repeat-x;
-  float: left;
-  position: relative;
-  width: 160px;
-  height: 130px;
-  border-right: 1px solid #d9d9d9;
-}
-.menu-thumbnail > img {
-  position: absolute;
-  top: 50%;
-  margin-top: -55px;
-  left: 50%;
-  margin-left: -50px;
-}
-.menu-progress {
-  background-image: url("../img/bkgd/menu-item-background.jpg");
-  background-repeat: repeat-x;
-  float: left;
-  position: relative;
-  height: 130px;
-  width: 58px;
-}
-.v-progress {
-  width: 15px;
-  height: 100px;
-  overflow: hidden;
-  margin: 13px auto;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  background: #fff;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-}
-.v-progress-bar {
-  width: 15px;
-  height: 100%;
-  margin-top: 50px;
-  background-color: #0e90d2;
-  background-image: -moz-linear-gradient(top, #149bdf, #0480be);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#149bdf), to(#0480be));
-  background-image: -webkit-linear-gradient(top, #149bdf, #0480be);
-  background-image: -o-linear-gradient(top, #149bdf, #0480be);
-  background-image: linear-gradient(top, #149bdf, #0480be);
-  background-image: -ms-linear-gradient(top, #149bdf, #0480be);
-  background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr="#149bdf",endColorstr="#0480be",GradientType=0);
-  -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
-  -moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
-  box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
-  -webkit-transition: height 0.6s ease;
-  -moz-transition: height 0.6s ease;
-  -ms-transition: height 0.6s ease;
-  -o-transition: height 0.6s ease;
-  transition: height 0.6s ease;
-}
+.menu-item{position:relative;width:220px;height:166px;background-color:#ebebeb;margin:0 auto 30px;-webkit-border-radius:5px;border-radius:5px;-webkit-box-shadow:2px 2px 3px rgba(0,0,0,0.1);box-shadow:2px 2px 3px rgba(0,0,0,0.1);overflow:hidden}
+.menu-chrome{position:absolute;z-index:2;top:0;left:0;width:100%;height:100%;border:1px solid #acacac;-webkit-box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);-webkit-border-radius:5px;border-radius:5px}
+.menu-header{height:40px;background:#dadada;border-bottom:1px solid #cbcbcb;text-align:center}
+.menu-header > h2{line-height:40px}
+.menu-thumbnail{background-image:url("../img/bkgd/menu-item-background.jpg");background-repeat:repeat-x;float:left;position:relative;width:160px;height:126px;border-right:1px solid #d9d9d9;-webkit-box-shadow:inset -1px 0 0 #e5e5e5;box-shadow:inset -1px 0 0 #e5e5e5}
+.menu-thumbnail > img{position:absolute;top:50%;margin-top:-55px;left:50%;margin-left:-50px}
+.menu-progress{background-image:url("../img/bkgd/menu-item-background.jpg");background-repeat:repeat-x;float:left;position:relative;height:126px;width:58px;-webkit-box-shadow:inset 1px 0 0 #f0f0f0;box-shadow:inset 1px 0 0 #f0f0f0}
+.v-progress{width:15px;height:100px;overflow:hidden;margin:13px auto;-webkit-border-radius:10px;border-radius:10px;background:#f5f5f5;border:1px solid #c4c4c4;-webkit-box-shadow:-1px 0 #f0f0f0,inset -1px 0 rgba(0,0,0,0.1);box-shadow:-1px 0 #f0f0f0,inset -1px 0 rgba(0,0,0,0.1)}
+.v-progress-bar{width:15px;height:100%;margin-top:50px;background-color:#0e90d2;background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #99c12c), color-stop(1, #a1c229));background-image:-webkit-linear-gradient(top, #99c12c 0%, #a1c229 100%);background-image:-moz-linear-gradient(top, #99c12c 0%, #a1c229 100%);background-image:-o-linear-gradient(top, #99c12c 0%, #a1c229 100%);background-image:-ms-linear-gradient(top, #99c12c 0%, #a1c229 100%);background-image:linear-gradient(top, #99c12c 0%, #a1c229 100%);background-repeat:repeat-x;filter:progid:dximagetransform.microsoft.gradient(startColorstr="#99C12C",endColorstr="#A1C229",GradientType=0);-webkit-box-shadow:inset -3px -1px rgba(0,0,0,0.15),inset 1px 1px rgba(0,0,0,0.15),inset 2px 0 rgba(255,255,255,0.15);box-shadow:inset -3px -1px rgba(0,0,0,0.15),inset 1px 1px rgba(0,0,0,0.15),inset 2px 0 rgba(255,255,255,0.15);-webkit-transition:margin-top .6s ease;-moz-transition:margin-top .6s ease;-o-transition:margin-top .6s ease;-ms-transition:margin-top .6s ease;transition:margin-top .6s ease}
+.button{-webkit-border-radius:5px;border-radius:5px;text-transform:uppercase;text-align:center}
+.button-reserve{display:block;padding:0;background-color:#8d8d8d;background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #939393), color-stop(1, #7b7b7b));background-image:-webkit-linear-gradient(top, #939393 0%, #7b7b7b 100%);background-image:-moz-linear-gradient(top, #939393 0%, #7b7b7b 100%);background-image:-o-linear-gradient(top, #939393 0%, #7b7b7b 100%);background-image:-ms-linear-gradient(top, #939393 0%, #7b7b7b 100%);background-image:linear-gradient(top, #939393 0%, #7b7b7b 100%);background-repeat:repeat-x;filter:progid:dximagetransform.microsoft.gradient(startColorstr="#939393",endColorstr="#7B7B7B",GradientType=0);height:50px;line-height:50px;font-size:25px;color:#dadada;text-shadow:0 -1px 0 rgba(0,0,0,0.5),1px 1px 0 rgba(255,255,255,0.4);letter-spacing:2px}
+.button-reserve:hover{color:#dadada}
