--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -43,14 +43,17 @@ Usage of a sublcass in HTML would look like this:
 */
 
 @import 'mixins'
+@import 'nib'
 
 .menu-item
 	position relative
 	width 220px
 	height 166px
 	background-color #EBEBEB
-	margin-bottom 30px
-	round-corners 5px
+	margin 0 auto 30px
+	border-radius 5px
+	box-shadow 2px 2px 3px rgba(0, 0, 0, 0.1)
+	overflow hidden
 .menu-chrome
 	position absolute
 	z-index 2
@@ -60,20 +63,23 @@ Usage of a sublcass in HTML would look like this:
 	height 100%
 	border 1px solid #ACACAC
 	box-shadow inset -1px -1px 1px rgba(255, 255, 255, 0.4), inset 1px 1px 1px rgba(255, 255, 255, 0.4)
-	round-corners 5px
+	border-radius 5px
 .menu-header
 	height 40px
 	background #DADADA
 	border-bottom 1px solid #CBCBCB
 	text-align center
+.menu-header > h2
+	line-height 40px
 .menu-thumbnail
 	background-image url('../img/bkgd/menu-item-background.jpg')
 	background-repeat repeat-x
 	float left
 	position relative
 	width 160px
-	height 130px
+	height 126px
 	border-right 1px solid #D9D9D9
+	box-shadow inset -1px 0 0 #E5E5E5
 .menu-thumbnail > img
 	position absolute
 	top 50%
@@ -85,34 +91,49 @@ Usage of a sublcass in HTML would look like this:
 	background-repeat repeat-x
 	float left
 	position relative
-	height 130px
+	height 126px
 	width 58px
+	box-shadow inset 1px 0 0 #F0F0F0
 
 .v-progress
 	width 15px
 	height 100px
 	overflow hidden
 	margin 13px auto
-	round-corners 10px
-	background #FFF
-	box-shadow inset 0 1px 2px rgba(0, 0, 0, 0.1)
-
+	border-radius 10px
+	background #F5F5F5
+	border 1px solid #C4C4C4
+	box-shadow -1px 0 #F0F0F0, inset -1px 0 rgba(0, 0, 0, 0.1)
 .v-progress-bar
 	width 15px
 	height 100%
 	margin-top 50px
 	background-color #0E90D2
-	background-image -moz-linear-gradient(top,#149BDF,#0480BE)
-	background-image -webkit-gradient(linear,0 0,0 100%,from(#149BDF),to(#0480BE))
-	background-image -webkit-linear-gradient(top,#149BDF,#0480BE)
-	background-image -o-linear-gradient(top,#149BDF,#0480BE)
-	background-image linear-gradient(top,#149BDF,#0480BE)
-	background-image -ms-linear-gradient(top,#149BDF,#0480BE)
+	background-image linear-gradient(top, #99C12C, #A1C229)
 	background-repeat repeat-x
-	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#149bdf",endColorstr="#0480be",GradientType=0)')
-	box-shadow inset 0 -1px 0 rgba(0, 0, 0, 0.15)
-	transition height .6s ease
+	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#99C12C",endColorstr="#A1C229",GradientType=0)')
+	box-shadow inset -3px -1px rgba(0, 0, 0, 0.15), inset 1px 1px rgba(0, 0, 0, 0.15), inset 2px 0 rgba(255, 255, 255, 0.15)
+	transition margin-top .6s ease
 
+.button
+	border-radius 5px
+	text-transform uppercase
+	text-align center
+.button-reserve
+	display block
+	padding 0
+	background-color #8D8D8D
+	background-image linear-gradient(top, #939393, #7B7B7B)
+	background-repeat repeat-x
+	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#939393",endColorstr="#7B7B7B",GradientType=0)')
+	height 50px
+	line-height 50px
+	font-size 25px
+	color #DADADA
+	text-shadow 0 -1px 0 rgba(0, 0, 0, 0.5), 1px 1px 0 rgba(255, 255, 255, 0.4)
+	letter-spacing 2px
+.button-reserve:hover
+	color #DADADA
 
 
 
