--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,9 +1,10 @@
 !!!
 html
 	head
+		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title= title
-		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
-		link(rel='stylesheet', href='/vendor/bootstrap-responsive.min.css')
+		link(rel='stylesheet', href='/vendor/bootstrap.css')
+		link(rel='stylesheet', href='/vendor/bootstrap-responsive.css')
 		link(rel='stylesheet', href='/css/style.css')
 		script(type='text/javascript')
 			var _gaq = _gaq || [];
@@ -15,4 +16,5 @@ html
 				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 			})();
-	body!= body
+	body
+		!= body
