--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -96,4 +96,4 @@ div.container
 							div.v-progress-bar
 	div.row
 		div.span12
-			a.button.button-reserve Reserve
+			a.button.button-reserve.active Reserve
