added selected states to menu items

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -65,6 +65,8 @@ Usage of a sublcass in HTML would look like this:
 	border-radius 5px
 	box-shadow 2px 2px 3px rgba(0, 0, 0, 0.1)
 	overflow hidden
+.menu-item.is-selected
+	box-shadow 0 0 0 5px #94D043, 0 0 3px 5px rgba(0, 0, 0, 0.1)
 .menu-chrome
 	position absolute
 	z-index 2
@@ -80,6 +82,7 @@ Usage of a sublcass in HTML would look like this:
 	background #DADADA
 	border-bottom 1px solid #CBCBCB
 	text-align center
+	border-radius 5px 5px 0 0
 .menu-header > h2
 	line-height 40px
 .menu-thumbnail
