--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -15,7 +15,7 @@ div.container
 	div.menu-wrapper
 		div.row
 			div.span3
-				div.menu-item
+				div.menu-item.is-selected
 					div.menu-chrome
 					div.menu-header
 						h2 HOUSING
@@ -35,7 +35,7 @@ div.container
 						div.v-progress
 							div.v-progress-bar
 			div.span3
-				div.menu-item
+				div.menu-item.is-selected
 					div.menu-chrome
 					div.menu-header
 						h2 HEALTH CARE
@@ -65,7 +65,7 @@ div.container
 						div.v-progress
 							div.v-progress-bar
 			div.span3
-				div.menu-item
+				div.menu-item.is-selected
 					div.menu-chrome
 					div.menu-header
 						h2 CHILD CARE
