--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -1,6 +1,7 @@
 .menu-item{position:relative;width:220px;height:166px;background-color:#ebebeb;margin:0 auto 30px;-webkit-border-radius:5px;border-radius:5px;-webkit-box-shadow:2px 2px 3px rgba(0,0,0,0.1);box-shadow:2px 2px 3px rgba(0,0,0,0.1);overflow:hidden}
+.menu-item.is-selected{-webkit-box-shadow:0 0 0 5px #94d043,0 0 3px 5px rgba(0,0,0,0.1);box-shadow:0 0 0 5px #94d043,0 0 3px 5px rgba(0,0,0,0.1)}
 .menu-chrome{position:absolute;z-index:2;top:0;left:0;width:100%;height:100%;border:1px solid #acacac;-webkit-box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);box-shadow:inset -1px -1px 1px rgba(255,255,255,0.4),inset 1px 1px 1px rgba(255,255,255,0.4);-webkit-border-radius:5px;border-radius:5px}
-.menu-header{height:40px;background:#dadada;border-bottom:1px solid #cbcbcb;text-align:center}
+.menu-header{height:40px;background:#dadada;border-bottom:1px solid #cbcbcb;text-align:center;-webkit-border-radius:5px 5px 0 0;border-radius:5px 5px 0 0}
 .menu-header > h2{line-height:40px}
 .menu-thumbnail{background-image:url("../img/bkgd/menu-item-background.jpg");background-repeat:repeat-x;float:left;position:relative;width:160px;height:126px;border-right:1px solid #d9d9d9;-webkit-box-shadow:inset -1px 0 0 #e5e5e5;box-shadow:inset -1px 0 0 #e5e5e5}
 .menu-thumbnail > img{position:absolute;top:50%;margin-top:-55px;left:50%;margin-left:-50px}
