Update icons and start second dashboard
Signed-off-by: Rob Dodson <lets.email.rob@gmail.com>

--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -32,3 +32,8 @@ Examples of Layout Styles:
 
 .menu-wrapper
 	margin-top 86px
+
+.reservation-wrapper
+	margin-top 31px
+.reservation-wrapper:first-child
+	margin-top 24px
