--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -16,84 +16,92 @@ div.container
 		div.row
 			div.span3
 				div.menu-item.is-selected
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 HOUSING
+						h2 Housing
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-housing-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 MEALS
+						h2 Meals
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-meals-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item.is-selected
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 HEALTH CARE
+						h2 Health Care
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-health-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 HYGIENE
+						h2 Hygiene
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-hygiene-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 EMPLOYMENT
+						h2 Employment
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-employment-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item.is-selected
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 CHILD CARE
+						h2 Transportation
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-transportation-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 MENTAL HEALTH
+						h2 Mental Health
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-mental-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 			div.span3
 				div.menu-item
+					img.button-edit(src="../img/icons/latest/icon-edit.png")
 					div.menu-chrome
 					div.menu-header
-						h2 FINANCIAL
+						h2 Financial
 					div.menu-thumbnail
-						img(src='/img/icons/beds.png')
+						img(src='/img/icons/latest/icon-financial-general.png')
 					div.menu-progress
 						div.v-progress
 							div.v-progress-bar
 	div.row
 		div.span12
-			a.button.button-reserve.active Reserve
+			a.button.button-reserve.is-active Reserve
