--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -1,5 +1,5 @@
 *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-body{background:url("../img/bkgd/60degree_gray.png") #e7e7e7 repeat}
-h2{color:#6b6b6b;text-shadow:0 1px 1px #fff}
+body{background:url("../img/bkgd/60degree_gray.png") #e7e7e7 repeat;font-family:Arial,Helvetica,sans-serif}
+h2{font-size:21px;color:#6b6b6b;text-shadow:0 1px 1px #fff}
 a{cursor:pointer}
 a:hover{text-decoration:none}
