--- a/app/public/css/base.styl
+++ b/app/public/css/base.styl
@@ -32,9 +32,11 @@ Examples of Base Styles:
 	box-sizing border-box
 
 body
-	background: url("../img/bkgd/60degree_gray.png") #E7E7E7 repeat;
+	background url("../img/bkgd/60degree_gray.png") #E7E7E7 repeat;
+	font-family Arial, Helvetica, sans-serif
 
 h2
+	font-size 21px
 	color #6B6B6B
 	text-shadow 0 1px 1px white
 
