--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -1,51 +1,20 @@
 /* Include your css files here */
-@import "base.css"
-@import "layout.css"
-@import "modules.css"
-
+@import 'base.css'
+@import 'layout.css'
+@import 'modules.css'
+@import 'mixins'
 
 header_height = 40px
 footer_height = 20px
-
-raiseText()
-	color grey
-	text-shadow: -1px 1px 0 white
-	-moz-text-shadow: -1px 1px 0 white
-	-webkit-text-shadow: -1px 1px 0 white
-disableText()
-	-webkit-touch-callout none
-	-webkit-user-select none
-	-khtml-user-select none
-	-moz-user-select none
-	-ms-user-select none
-	user-select none
-drawContainer()
-	color #777
-	disableText()
-	border 1px solid #ddd
-	background-color white
-	border-radius 5px
-	-moz-border-radius 5px
-	-webkit-border-radius 5px
-drawDiagonalStripes()
-	background-color: rgba(0, 0, 0, .1);
-	background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, rgba(255, 255, 255, .2)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.75, rgba(255, 255, 255, .2)), color-stop(.75, transparent), to(transparent));
-	background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
-	background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
-	background-image: -o-linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
-	background-image: linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
-	-webkit-background-size: 30px 30px;
-	-moz-background-size: 30px 30px;
-	background-size: 30px 30px;
 
 html, body 
 	margin: 0
 	padding: 0
 	user-select: none
-	
+
 label, .subheading
 	raiseText()
-	
+
 // public dashboard //
 #btn-about
 	top 1px
