--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -104,4 +104,4 @@ div.container
 							div.v-progress-bar
 	div.row
 		div.span12
-			a.button.button-reserve.is-active Reserve
+			a.button.button-reserve Reserve
