--- a/app/server/views/dashboard-2.jade
+++ b/app/server/views/dashboard-2.jade
@@ -10,3 +10,21 @@ div.navbar.navbar-fixed-top
 				li.divider-vertical
 				li
 					a Log Out
+
+div.container
+	div.row
+		div.span12
+			a.button.button-back Back
+				i.icon-back-arrow
+	div.row
+		div.span12
+			div.reservation-wrapper
+				div.reservation
+					div.reservation-header
+						ul.l-horizontal.clearfix.reservation-info
+							li.reservation-org Glide Memorial
+							li |
+							li.reservation-address 330 Ellis Street, San Francisco, CA 94102
+							li |
+							li.reservation-phone 415.674.6000
+					div.reservation-body
