--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -1,3 +1,7 @@
-.menu-wrapper{margin-top:86px}
-.reservation-wrapper{margin-top:31px}
-.reservation-wrapper:first-child{margin-top:24px}
+.navbar + .container{margin-top:40px}
+.menu-wrapper{margin-top:60px}
+.reservation-wrapper{margin-top:30px}
+.reservation-wrapper:first-child{margin-top:25px}
+.l-horizontal{margin:0;padding:0;list-style-type:none;width:100%}
+.l-horizontal > li{display:inline;float:left;margin-left:10px}
+.l-horizontal > li:first-child{margin-left:0}
