--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -30,10 +30,25 @@ Examples of Layout Styles:
 @import 'mixins'
 @import 'nib'
 
+.navbar + .container
+	margin-top 40px
+
 .menu-wrapper
-	margin-top 86px
+	margin-top 60px
 
 .reservation-wrapper
-	margin-top 31px
+	margin-top 30px
 .reservation-wrapper:first-child
-	margin-top 24px
+	margin-top 25px
+
+.l-horizontal
+	margin 0
+	padding 0
+	list-style-type none
+	width 100%
+.l-horizontal > li
+	display inline
+	float left
+	margin-left 10px
+.l-horizontal > li:first-child
+	margin-left 0
