--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -43,6 +43,7 @@ Usage of a sublcass in HTML would look like this:
 */
 
 @import 'mixins'
+@import 'icons'
 @import 'nib'
 
 /* -------------------------------------------------- 
@@ -141,9 +142,30 @@ Usage of a sublcass in HTML would look like this:
 	transition margin-top .6s ease
 
 /*  --------------------------------------------------
+    :: Reservations
+    -------------------------------------------------- */
+.reservation
+	height 250px
+	border 1px solid black
+	border-radius 5px
+	overflow hidden
+
+.reservation-header
+	height 45px
+	border-bottom 1px solid #737373
+	background-image linear-gradient(top, #5F5E5E, #4B4A4A)
+	box-shadow inset 0 -1px #414141, inset 1px 1px #717070, inset -1px 0 #717070
+	color white
+	font-size 16px
+.reservation-header > .reservation-info
+	padding-top 14px
+	padding-left 27px
+
+/*  --------------------------------------------------
     :: Buttons
     -------------------------------------------------- */
 .button
+	display inline-block
 	border-radius 5px
 	text-transform uppercase
 	text-align center
@@ -153,29 +175,31 @@ Usage of a sublcass in HTML would look like this:
 	padding 0
 	margin-top 45px
 	height 50px
-	line-height 50px
 	font-size 32px
-	color #DADADA
-	text-shadow 0 -1px 0 #968E8F, 0 1px 0 #BDD2B3
-	letter-spacing 2px
-	border 1px solid #4C4C4C
-	background-color #8D8D8D
-	background-image linear-gradient(top, #939393, #7B7B7B)
-	background-repeat repeat-x
-	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#939393",endColorstr="#7B7B7B",GradientType=0)')
-	box-shadow 1px 1px 3px rgba(0, 0, 0, 0.2), -1px -1px 3px rgba(0, 0, 0, 0.2), inset 0 1px #A8A8A8
+	line-height 50px
+	quietButton()
 .button-reserve:hover
-	color #DADADA
+	color #FFF
 .button-reserve.is-active
-	border 1px solid #58AC00
-	background-color #93d141
-	background-image linear-gradient(top, #76CC06, #51C001)
-	background-repeat repeat-x
-	filter unquote('progid:dximagetransform.microsoft.gradient(startColorstr="#A2C32A",endColorstr="#8FB722",GradientType=0)')
-	box-shadow 1px 1px 3px rgba(0, 0, 0, 0.2), -1px -1px 3px rgba(0, 0, 0, 0.2), inset 0 1px #88E700
+	loudButton()
 
 .button-edit
 	width 48px
 	height 48px
 
+.button-back
+	position relative
+	height 35px
+	padding-left 55px
+	padding-right 10px
+	margin-top 35px
+	font-size 24px
+	line-height 32px
+	quietButton()
+.button-back:hover
+	color #FFF
+.button-back > .icon-back-arrow
+	position absolute
+	top 4px
+	left 10px
 
