--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -30,6 +30,12 @@ Examples of Layout Styles:
 @import 'mixins'
 @import 'nib'
 
+.container, .navbar-fixed-top .container
+	width 960px
+
+.row
+	margin-left 0
+
 .navbar + .container
 	margin-top 40px
 
