--- a/app/server/views/dashboard-2.jade
+++ b/app/server/views/dashboard-2.jade
@@ -13,18 +13,49 @@ div.navbar.navbar-fixed-top
 
 div.container
 	div.row
-		div.span12
-			a.button.button-back Back
-				i.icon-back-arrow
+		a.button.button-back Back
+			i.icon-back-arrow
 	div.row
-		div.span12
-			div.reservation-wrapper
-				div.reservation
-					div.reservation-header
-						ul.l-horizontal.clearfix.reservation-info
-							li.reservation-org Glide Memorial
-							li |
-							li.reservation-address 330 Ellis Street, San Francisco, CA 94102
-							li |
-							li.reservation-phone 415.674.6000
-					div.reservation-body
+		div.reservation-wrapper
+			div.reservation
+				div.reservation-header
+					ul.l-horizontal.clearfix.reservation-info
+						li.reservation-org Glide Memorial
+						li |
+						li.reservation-address 330 Ellis Street, San Francisco, CA 94102
+						li |
+						li.reservation-phone 415.674.6000
+				div.reservation-body
+					ul.l-horizontal.clearfix.reservation-entries
+						li
+							div.menu-item
+								div.menu-chrome
+								div.menu-header
+									h2 Mental Health
+								div.menu-thumbnail
+									img(src='/img/icons/latest/icon-mental-general.png')
+								div.menu-progress
+									div.v-progress
+										div.v-progress-bar
+						li
+							div.menu-item
+								div.menu-chrome
+								div.menu-header
+									h2 Mental Health
+								div.menu-thumbnail
+									img(src='/img/icons/latest/icon-mental-general.png')
+								div.menu-progress
+									div.v-progress
+										div.v-progress-bar
+						li
+							div.menu-item
+								div.menu-chrome
+								div.menu-header
+									h2 Mental Health
+								div.menu-thumbnail
+									img(src='/img/icons/latest/icon-mental-general.png')
+								div.menu-progress
+									div.v-progress
+										div.v-progress-bar
+						li
+							a.button.button-reserve.button-reserve-fat Reserve
