Removed box-sizing border-box cuz Bootstrap likes to do things the stupid way

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -80,7 +80,7 @@ Usage of a sublcass in HTML would look like this:
 	right -20px
 	z-index 3
 .menu-item.is-selected
-	box-shadow 0 0 0 5px #94D043, 0 0 3px 5px rgba(0, 0, 0, 0.1)
+	box-shadow 1px 1px 0 5px #94D043, 0 0 3px 5px rgba(0, 0, 0, 0.1)
 .menu-item.is-selected > .button-edit
 	display block
 
@@ -154,6 +154,7 @@ Usage of a sublcass in HTML would look like this:
     -------------------------------------------------- */
 .reservation
 	height 250px
+	margin-bottom 30px
 	background #EEEEEE
 	border-radius 10px
 	box-shadow inset 0 0 5px 3px #AFAFAF
@@ -217,13 +218,13 @@ Usage of a sublcass in HTML would look like this:
 	padding-right 10px
 	margin-top 35px
 	font-size 22px
-	line-height 32px
+	line-height 34px
 	quietButton()
 .button-back:hover
 	color #FFF
 .button-back > .icon-back-arrow
 	position absolute
-	top 4px
+	top 6px
 	left 10px
 
 
