--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -185,6 +185,7 @@ label, .subheading
 	padding-left 20px
 	
 // service elements shared by both services & offerings
+
 #inventory .service
 	width 100px
 	margin auto
@@ -222,11 +223,9 @@ label, .subheading
 	text-align right
 #inventory #our-services .service img
 	margin-left 40px
-	
-// need to fix this, rows not stacking correctly.. //
 #inventory #our-services .services
-	min-height 140px
-	overflow visible
+	overflow hidden
+	padding-top 18px
 #inventory #our-services #edit-avail
 	display none
 #inventory #our-services #edit-avail .del, .add
