--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -7,3 +7,4 @@
 .l-horizontal{margin:0;padding:0;list-style-type:none;width:100%}
 .l-horizontal > li{display:inline;float:left;margin-left:10px}
 .l-horizontal > li:first-child{margin-left:0}
+hr.tight{margin:18px 0 0}
